# fastauth

./: README.md  pyproject.toml
example/: app.py  models.py
fastauth/: __init__.py  exceptions.py  fastauth.py  services.py  types.py
fastauth/models/: schemas.py  user.py
