[tool.poetry]
authors = ["Chorlte my balls <philmattdev@gmail.com>"]
description = "FastAuth is a in-house FastAPI authentication library that simplifiesthe process of handling user authentication."
name = "fastauth"
readme = "README.md"
version = "0.1.1"

[tool.poetry.dependencies]
bcrypt = "^4.1.2"
beanie = "^1.25.0"
fastapi = "^0.110.0"
loguru = "^0.7.2"
python = "^3.11"
redis-om = "^0.2.1"
uvicorn = "^0.28.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
